2010-03-10  Sancho Lerena  <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Automonitoring includes now status of 
	database maintance and warns if more than 24hrs without running 
	database maintance script.

	* util/pandora_db.pl: Added support to new purge parameters for
	event, audits, snmp traps, string data and gis data. Added new 
	section to clean orphaned information (using an application - 
	implemented database referencial integrity model).

2010-03-10  Miguel de Dios  <miguel.dedios@artica.es>

	* util/pandora_xml_stress.conf: deleted conf file, I upload by fail.

2010-03-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Set tagente_estado.current_interval to
	  tagente.intervalo if tagente_modulo.module_interval is 0.

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/GIS.pm, lib/PandoraFMS/GeoIP.pm: Modified to put
	MaxMind GeoIP PurePerl GPL library into PandoraFMS package.

2010-03-04  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Several typos and better formating.

	* util/change_remoteconfig.pl: Tool to massive edit the server IP 
	in remote configuration files. Could be modified to alter any other
	fixed field.

	* util/gpx2pandora_agent_data.pl: Transform a standard GPX GIS data
	file in several Pandora FMS XML data server compatible files with GIS
	data.

	* util/gis.README: Small "documentation" on how to start to using GIS
	in the Server.


2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	* conf/pandora_server.conf: Corrected typo 
	
2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Server.pm: Added spaces between server name and server
	type on the event generation string.

	* lib/PandoraFMS/GeoIP.pm: MaxMind GeoIP PurePerl GPL library to access
	reverse geoip data.

	* lib/PandoraFMS/GIS.pm: Modified to use GeoIP.pm

	* lib/PandoraFMS/DataServer.pm: Moved log line in case parent_agent_name
	is not defined
